Fixed svg coordinate system. Created Stages.js to hold all static stage info. Debug Axes / Origin / Blast Zones properly aligned.

--- a/src/assets/scss/modules/_vizWindow.scss
+++ b/src/assets/scss/modules/_vizWindow.scss
@@ -12,13 +12,28 @@
     img {
       width: inherit;
       height: inherit;
+      -moz-user-select: none;
+      -webkit-user-select: none;
+      user-select: none;
 
     }
     svg {
       width: inherit;
       height: inherit;
       position: absolute;
+      -moz-user-select: none;
+      -webkit-user-select: none;
+      user-select: none;
+      // Need to flip Y scale to match coordinate system
+      transform: scaleY(-1);
+
+      text {
+        // Flip y again to have text appear right-side-up
+        transform: scaleY(-1);
+      }
     }
+
+
 
   }
 }
